Final codestyle touchups