@@ -391,7 +391,9 @@ public class AssistedFactoryMocker<T, U>
      * @return The name as provided by {@link Assisted#value()} if the parameter has a non-blank name, otherwise null.
      */
     static @Nullable <T extends Annotation> String getAnnotationValue(
-        Class<T> annotationType, Parameter parameter, Function<T, @Nullable String> mapper)
+        Class<T> annotationType,
+        Parameter parameter,
+        Function<T, @Nullable String> mapper)
     {
         final @Nullable T annotation = parameter.getAnnotation(annotationType);
         //noinspection ConstantConditions
@@ -437,7 +439,7 @@ public class AssistedFactoryMocker<T, U>
      * @return The matching parameter description from the list of matches.
      *
      * @throws IllegalStateException
-     *     When 0 or more than 1 matches were found.
+     *     When 0 or more than 1 match was found.
      */
     static ParameterDescription getMatchingParameter(ParameterDescription param, List<ParameterDescription> matches)
     {
@@ -447,22 +449,25 @@ public class AssistedFactoryMocker<T, U>
 
         if (matches.size() == 1)
         {
-            final ParameterDescription match = matches.get(0);
+            final ParameterDescription match = matches.getFirst();
             if ((match.name() == null && param.name == null) ||
                 (match.name() != null && param.name != null))
                 return match;
         }
 
-        @SuppressWarnings("ConstantConditions") // IntelliJ doesn't like potentially null values for requireNonNull -_-
         final String paramName = Objects.requireNonNull(
             param.name(),
-            "Name of parameter " + param + " cannot be null!");
+            "Name of parameter " + param + " cannot be null!"
+        );
+
         final List<ParameterDescription> result = matches.stream().filter(val -> paramName.equals(val.name())).toList();
         if (result.isEmpty())
             throw new IllegalStateException(
                 "Failed to find a matching factory parameter for constructor parameter: " + param);
+
         if (result.size() > 1)
             throw new IllegalStateException("Found too many matches for constructor param " + param + ": " + result);
+
         return result.getFirst();
     }
 
@@ -476,7 +481,8 @@ public class AssistedFactoryMocker<T, U>
      * @return A list of {@link MappedParameter}s.
      */
     static List<MappedParameter> getMappedParameters(
-        List<ParameterDescription> factoryParams, List<ParameterDescription> ctorParams)
+        List<ParameterDescription> factoryParams,
+        List<ParameterDescription> ctorParams)
     {
         final List<MappedParameter> ret = new ArrayList<>(ctorParams.size());
         for (int idx = 0; idx < ctorParams.size(); ++idx)
